syntax = "proto3";

package project.planton.provider.civo.civobucket.v1;

import "buf/validate/validate.proto";
import "project/planton/provider/civo/civobucket/v1/spec.proto";
import "project/planton/provider/civo/civobucket/v1/stack_outputs.proto";
import "project/planton/shared/metadata.proto";

// civo-bucket
message CivoBucket {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'civo.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'CivoBucket'];

  //metadata
  project.planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  CivoBucketSpec spec = 4 [(buf.validate.field).required = true];

  //status
  CivoBucketStatus status = 5;
}

// civo-bucket status
message CivoBucketStatus {
  //stack-outputs
  //  civo-bucket stack-outputs
  CivoBucketStackOutputs outputs = 1;
}
